@@ -91,7 +91,7 @@ mountpoint.txt_switch2%=Switch
 mountpoint.txt_label%=Label
 mountpoint.txt_mount%=Mount Point
 mountpoint.txt_filesys%=File System
-mountpoint.txt_add%=Add a partition
+mountpoint.txt_add%=Add
 mountpoint.txt_action%=Action
 mountpoint.opt_add_mount=/home;/boot;/opt;/usr;/work;/var/tmp
 mountpoint.txt_button_del%=Remove
