@@ -81,8 +81,9 @@ body {
 }
 table { empty-cells: show; }
 th { text-align: left; font-weight: bold; }
-
-table.table_col5 tr td { width: 20% }
+table.table_col5 tr th { width: 20%; }
+table.table_col5 tr td { width: 20%; }
+table.table_col5 { width: 100%; }
 td { vertical-align: top; }
 .horicontal_line { border-top: 1px #ff6600 solid; margin-top: 1em; margin-bottom: 1em;}
 
