@@ -92,7 +92,7 @@ mountpoint.txt_switch1%=Umschalten
 mountpoint.txt_switch2%=Umschalten
 mountpoint.txt_filesys%=Dateisystem
 mountpoint.txt_mount%=Mount-Punkt
-mountpoint.txt_add%=Partition einfügen
+mountpoint.txt_add%=Einfügen
 mountpoint.txt_action%=Aktion
 mountpoint.opt_add_mount=/home;/boot;/opt;/usr;/work;/var/tmp
 mountpoint.txt_button_del%=Entfernen
