@@ -89,7 +89,7 @@ mountpoint.txt_device%=Dispositivo
 mountpoint.txt_label%=Rótulo
 mountpoint.txt_mount%=Ponto De Montagem
 mountpoint.txt_filesys%=Sistema de Arquivo
-mountpoint.txt_add%=Adicinar uma  partição
+mountpoint.txt_add%=Adicinar
 mountpoint.txt_action%=Ação
 mountpoint.opt_add_mount=/home;/boot;/opt;/usr;/work;/var/tmp
 mountpoint.txt_button_del%=Remover
