@@ -1,8 +1,11 @@
 sidu-installer (0.9.9) unstable; urgency=low
 
   * Fix: Handling of disks without partitions
-  * Fix: Exclude of the live cd from disk/partition list
-  * 
+  * Fix: Exclude of the live cd from disk/partition list (closes #370)
+  * The rootfs will be shown in the mountpoint table (closes #378) 
+  * The rootfs will be excluded from the mountpoint devices (closes #380)
+  * CSS: 5-col-tables: width 100%
+  * Button text: "add the partition" -> "add"
 
  -- J. Hamatoma <hamatoma@gmx.de>  Fri, 09 Dec 2011 23:32:42 +0100
 
